; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/test/extr_test_vfs_uart.c_fwrite_str_loopback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/test/extr_test_vfs_uart.c_fwrite_str_loopback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@CONFIG_ESP_CONSOLE_UART_NUM = common dso_local global i32 0, align 4
@UART0 = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@stdout = common dso_local global i32 0, align 4
@portTICK_PERIOD_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @fwrite_str_loopback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fwrite_str_loopback(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* @CONFIG_ESP_CONSOLE_UART_NUM, align 4
  %6 = call i32 @uart_tx_wait_idle(i32 %5)
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @UART0, i32 0, i32 0, i32 0), align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i32, i32* @stdout, align 4
  %10 = call i32 @fwrite(i8* %7, i32 1, i64 %8, i32 %9)
  %11 = load i32, i32* @stdout, align 4
  %12 = call i32 @fflush(i32 %11)
  %13 = load i32, i32* @CONFIG_ESP_CONSOLE_UART_NUM, align 4
  %14 = call i32 @uart_tx_wait_idle(i32 %13)
  %15 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %16 = sdiv i32 2, %15
  %17 = call i32 @vTaskDelay(i32 %16)
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @UART0, i32 0, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @uart_tx_wait_idle(i32) #1

declare dso_local i32 @fwrite(i8*, i32, i64, i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @vTaskDelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
